# clipboard_ffi

./: .gitignore  Cargo.toml  Clipboard_ffi.sln  Clipboard_ffi.vcxproj  Clipboard_ffi.vcxproj.filters  ErrorRecord.hpp  Rust FFI with C.pptx  main.cpp  readme.md
clipboard_rs/: Cargo.toml
clipboard_rs/src/: bindings.rs  lib.rs  readme.txt
solution/: main.cpp
solution/clipboard_rs/: build.rs
solution/clipboard_rs/src/: bindings.rs  lib.rs
start-here/: ErrorRecord.hpp  main.cpp
start-here/clipboard_rs/: Cargo.toml  build.rs
start-here/clipboard_rs/src/: lib.rs
