[package]
name = "clipboard_rs"
version = "0.1.0"
authors = ["Adam Burch <adburch@ntdev.microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
winapi = {version ="0.3.8", features = ["minwindef", "ntdef", "winbase", "winnt", "winuser"]}

[build-dependencies]
bindgen = "0.53.1"
